--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "markdown-it-calendar",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "repository": "https://github.com/TseHang/Markdown-it-calendar.git",
-  "author": "TseHang <a54383813@gmail.com>",
+  "author": "Donbadar TseHang ",
   "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
@@ -11,6 +11,7 @@
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "gulp-babel": "^6.1.2",
+    "gulp-uglify": "^2.1.0"
   }
 }
