--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Donbadar TseHang ",
   "license": "MIT",
   "scripts": {
-    "test": "node --use_strict tester.js"
+    "test": "node --use_strict test/tester.js"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
